# goodsale_project

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/app/: match.py  parser.py
src/core/: db.py  es_client.py  logging.py  models.py  schemas.py  settings.py
